--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleCom.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>Imperial Tutorial</title>
 </head>
 
@@ -247,8 +248,6 @@
                 <img id="popupImage" class="popupImage" src="" alt="Popup Image">
             </div>
         </section>
-
-
         <!-- highlight section end -->
         <!-- gallery section start -->
         <section class="gallerySection">
@@ -261,12 +260,18 @@
             </div>
             <div class="galleryImages">
                 <div class="imagesSection">
-                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg" alt="" class="img1 imgGal">
-                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg" alt="" class="img2 imgGal">
-                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg" alt="" class="img3 imgGal">
-                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg" alt="" class="img4 imgGal">
-                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg" alt="" class="img5 imgGal">
-                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg" alt="" class="img6 imgGal">
+                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg"
+                        alt="" class="img1 imgGal">
+                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg"
+                        alt="" class="img2 imgGal">
+                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg"
+                        alt="" class="img3 imgGal">
+                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg"
+                        alt="" class="img4 imgGal">
+                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg"
+                        alt="" class="img5 imgGal">
+                    <img src="https://www.shutterstock.com/image-photo/calm-weather-on-sea-ocean-600nw-2212935531.jpg"
+                        alt="" class="img6 imgGal">
                 </div>
             </div>
             <div id="galleryPopup" class="glPopup">
@@ -275,6 +280,16 @@
             </div>
         </section>
         <!-- gallery section end -->
+        <section class="ctaSection">
+            <div class="ctaContent">
+                <h3>Master Your Subjects with <span>Imperial Tutorial's</span></h3>
+                <p>Gain deep understanding with our expert guidance. Enquire now to discover our courses!</p>
+            </div>
+            <div class="ctaBtns">
+                <a href="#" class="btn lightBtn">Call Us Now</a>
+                <a href="#" class="btn darkBtn">Book an Appointment</a>
+            </div>
+        </section>
     </main>
     <!-- main container end -->
 
