--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
             </div>
         </section>
         <!-- gallery section end -->
+        <!-- cta section start -->
         <section class="ctaSection">
             <div class="ctaContent">
                 <h3>Master Your Subjects with <span>Imperial Tutorial's</span></h3>
@@ -290,6 +291,68 @@
                 <a href="#" class="btn darkBtn">Book an Appointment</a>
             </div>
         </section>
+        <!-- cta section end -->
+        <!-- testimonial section start -->
+        <section class="testimonialSection">
+            <div class="testiHeader sectionHeader">
+                <div class="testiTxt headTitle">
+                    <span class="liTitle">Testimonial</span>
+                    <h3>Students Cheer <span>for us!</span></h3>
+                </div>
+                <a href="#" class="btn borderBtn"><i class="ri-arrow-right-line"></i></a>
+            </div>
+            <div class="tesBoxes tesList">
+                <div class="tesBox" style="--position: 1">
+                    <i class="ri-double-quotes-l"></i>
+                    <p>
+                        Testimonial advertising is a powerful marketing strategy that leverage real customer
+                        experience
+                        to build trust and creadiblity for your brand.
+                    </p>
+                    <div class="tesDetails">
+                        <h4>Shaikh Affan</h4>
+                        <p class="tesYrs">2022-2023</p>
+                    </div>
+                </div>
+                <div class="tesBox" style="--position: 2">
+                    <i class="ri-double-quotes-l"></i>
+                    <p>
+                        Testimonial advertising is a powerful marketing strategy that leverage real customer
+                        experience
+                        to build trust and creadiblity for your brand.
+                    </p>
+                    <div class="tesDetails">
+                        <h4>Shaikh Affan</h4>
+                        <p class="tesYrs">2022-2023</p>
+                    </div>
+                </div>
+                <div class="tesBox" style="--position: 3">
+                    <i class="ri-double-quotes-l"></i>
+                    <p>
+                        Testimonial advertising is a powerful marketing strategy that leverage real customer
+                        experience
+                        to build trust and creadiblity for your brand.
+                    </p>
+                    <div class="tesDetails">
+                        <h4>Shaikh Affan</h4>
+                        <p class="tesYrs">2022-2023</p>
+                    </div>
+                </div>
+                <div class="tesBox" style="--position: 4">
+                    <i class="ri-double-quotes-l"></i>
+                    <p>
+                        Testimonial advertising is a powerful marketing strategy that leverage real customer
+                        experience
+                        to build trust and creadiblity for your brand.
+                    </p>
+                    <div class="tesDetails">
+                        <h4>Shaikh Affan</h4>
+                        <p class="tesYrs">2022-2023</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- testimonial section end -->
     </main>
     <!-- main container end -->
 
